# ai_library

./: .gitignore  AGENTS.md  LICENSE  README.md
ai-workflow/memory/mavis/main/: session_handoff.md  state.json
ai-workflow/memory/mavis/main/backlog/: m-v0.0.2-c.md
backend/: .env.example  README.md  pyproject.toml
backend/okf/: SPEC.md
backend/scripts/: dev.sh  smoke.sh  smoke_audit_graph.py  smoke_bundles_cycle.py  smoke_enrich.py  smoke_health.py  smoke_ingest_statuses.py  smoke_ingest_sync.py  smoke_path_y.py  smoke_pyproject.py  smoke_raw_cycle.py  smoke_search.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/: __init__.py  envelope.py  errors.py  middleware.py  path_y.py
backend/src/api/v0_2/: __init__.py  health.py
backend/src/api/v1/: __init__.py  audit.py  bundles.py  concepts.py  enrich.py  graph.py  health.py  ingest.py  monitoring.py  raw.py
backend/src/llm/: __init__.py  metrics.py  pi_enrich.py  sdk_client.py  types.py
backend/src/okf/: __init__.py  envelope.py
backend/src/sources/: __init__.py  base.py  registry.py
backend/src/storage/: __init__.py  audit.py  raw.py
backend/tests/: __init__.py  test_audit.py  test_bundles.py  test_concepts.py  test_enrich.py  test_envelope.py  test_graph.py  test_health.py  test_ingest.py  test_metrics.py  test_monitoring.py  test_raw.py
docs/adr/: 0001-ai-library-extraction.md  0001-founding-charter.md  0002-okf-adoption.md
docs/planning/: v0.0.1-ai-library-roadmap.md  v0.3.0-ai-library-roadmap.md
web/: .gitignore  package-lock.json  package.json  vitest.config.ts
web/src/: app.css  app.html
web/src/lib/: api.test.ts  api.ts  path-y.test.ts  path-y.ts  types.test.ts  types.ts
web/src/lib/components/: PathYDevFixture.svelte  Sidebar.svelte
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/audit/: +page.svelte
web/src/routes/bundles/: +page.svelte
web/src/routes/concepts/: +page.svelte
web/src/routes/ingest/: +page.svelte
web/src/routes/raw/: +page.svelte
(+2 files in other folders)
