[project]
name = "ai-library-backend"
version = "0.0.1"
description = "AI Agent Library backend (FastAPI + OKF + Pi LLM enrich) — standalone reference implementation, M-v0.0.1-alpha founding"
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "ykylee", email = "ddn777@hotmail.com" },
]
keywords = ["okf", "ai-agent-library", "knowledge-bundle", "fastapi", "llm-enrich", "pi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.115.0,<0.120.0",  # 0.120+ 의 include_router prefix propagation 버그 회피
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "PyYAML>=6.0.1",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]
# Pi LLM enrich optional dep (M-v0.0.3+ 활성화).
# pi-coding-agent pip available range: 0.4.0 ~ 0.6.0 (>=0.7 부터는 별도 registry).
# `pip install -e .[pi]` 로 설치. 미설치 시 enrich endpoint 는 graceful skip + E_NOT_IMPLEMENTED.
pi = [
    "pi-coding-agent>=0.4.0,<0.7.0",  # pip available max 0.6.0
]

[project.scripts]
ai-library = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
strict = true
python_version = "3.13"
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
